<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utils.ComposeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_top_layout"
        android:layout_alignParentTop="true">



        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/img_profile"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            />



        <ImageButton
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:paddingTop="12dp"
            android:background="@drawable/close_tweet"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_centerVertical="true"
            android:id="@+id/btn_close"
            android:contentDescription="@string/button_close" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_top_layout"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:hint="@string/hint"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        android:imeOptions="actionDone"
        android:lines="9"
        android:maxLines="9"
        android:scrollbarStyle="insideInset"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_bottom_layout"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_counter"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:text="@string/limit_txt"
            android:layout_toLeftOf="@+id/btn_tweet"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:id="@+id/btn_tweet"
            style="@style/TweetButtonDisable"
            />
    </RelativeLayout>



</RelativeLayout>
